<resources>
    <string name="app_name">MUSIMENTAL</string>
    <string name="musimental">MUSIMENTAL</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="contentDesc">Background Sign Up</string>
    <string name="already_have_an_account_sign_in">Already Have An Account? , Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">  Email</string>
    <string name="welcome">WELCOME</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="remember_me">Remember Me</string>

</resources>
