<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/signupbg"
    android:id="@+id/parent"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/contentDesc"
        android:scaleType="centerCrop"
        android:src="@drawable/signupbg" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        />

<RelativeLayout
    android:layout_width="350dp"
    android:layout_height="wrap_content"
android:id="@+id/firstname"
    android:background="@drawable/textfieldbg"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="450dp"
    >
    <TextView
        android:id="@+id/firstnametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/first_name"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <EditText
        android:layout_marginStart="10dp"
        android:id="@+id/firstnameinput"
        android:layout_below="@id/firstnametxt"
        android:layout_width="400dp"
        android:background="@drawable/textfieldbg"
        android:layout_height="wrap_content"
        android:textSize="25sp"

        android:inputType="text"
        android:importantForAutofill="no" />

</RelativeLayout>

    <RelativeLayout
        android:id="@+id/lastname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfieldbg"
        android:layout_below="@id/firstname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-440dp"
        >
        <TextView
            android:id="@+id/lastnametxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/last_name"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <EditText

            android:id="@+id/lastnameinput"
            android:layout_marginStart="10dp"
            android:layout_below="@id/lastnametxt"
            android:layout_width="400dp"
            android:background="@drawable/textfieldbg"
            android:layout_height="wrap_content"
            android:textSize="25sp"

            android:inputType="text"
            android:importantForAutofill="no" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfieldbg"
        android:layout_below="@id/lastname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/emailtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <EditText

            android:id="@+id/emailinput"
            android:layout_marginStart="10dp"
            android:layout_below="@id/emailtxt"
            android:layout_width="400dp"
            android:background="@drawable/textfieldbg"
            android:layout_height="wrap_content"
            android:textSize="25sp"

            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfieldbg"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/passwordtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <EditText

            android:id="@+id/passwordinput"
            android:layout_marginStart="10dp"
            android:layout_below="@id/passwordtxt"
            android:layout_width="400dp"
            android:background="@drawable/textfieldbg"
            android:layout_height="wrap_content"
            android:textSize="25sp"

            android:inputType="textPassword"
            android:importantForAutofill="no" />

    </RelativeLayout>

   <!-- <RelativeLayout
        android:id="@+id/confirmpassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfieldbg"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/confirmpasswordtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/confirm_password"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <EditText

            android:id="@+id/confirmpasswordinput"
            android:layout_marginStart="10dp"
            android:layout_below="@id/confirmpasswordtxt"
            android:layout_width="400dp"
            android:background="@drawable/textfieldbg"
            android:layout_height="wrap_content"
            android:textSize="30sp"

            android:inputType="textPassword"
            android:importantForAutofill="no" />

    </RelativeLayout> -->

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfieldbg"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:layout_below="@id/password"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/signIn"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupbtn"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="@string/already_have_an_account_sign_in"/>

</RelativeLayout>